Fixed background positioning on mobile devices

--- a/style.css
+++ b/style.css
@@ -465,11 +465,12 @@ p{
     justify-content: space-between;
 }
 .landing-img{
-    opacity: 15%;
+    opacity: 5%;
     width: 100vw;
 }
 .landing-container{
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
     position: absolute;
 }
@@ -536,7 +537,7 @@ p{
         height: 65vw;
     }
     .scroll-margin{
-        min-height: 0px;
+        min-height: 1rem;
     }
     .row-column{
         flex-direction: column;
@@ -610,9 +611,13 @@ p{
         padding-top: 15vw;
     }
 }
-@media screen and (max-width: 850px){
+@media screen and (max-width: 912px){
     .landing-img{
         height: 100vh;
         width: auto;
+    }
+    .landing-container{
+        display: flex;
+        justify-content: flex-end;
     }
 }
